<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/nav_home"
          android:title="@string/home"
        android:icon="@drawable/ic_home_light"/>

    <item android:id="@+id/nav_cerbung"
          android:title="@string/cerbung"
        android:icon="@drawable/ic_opened_book_with_a_fold"/>

    <item android:id="@+id/nav_cerpen"
          android:title="@string/cerpen"
        android:icon="@drawable/ic_opened_book_with_a_fold"/>

    <item android:id="@+id/nav_dongeng"
          android:title="@string/dongeng"
          android:icon="@drawable/ic_opened_book_with_a_fold"/>

    <item android:id="@+id/nav_event"
          android:title="@string/event"
        android:icon="@drawable/ic_opened_book_with_a_fold"/>

    <item android:id="@+id/nav_member"
          android:title="@string/member"
          android:icon="@drawable/ic_opened_book_with_a_fold"/>

    <item android:id="@+id/nav_logout"
          android:title="@string/logout"
        android:icon="@drawable/ic_logout"/>


</menu>