<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_setup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10dp"
                tools:context="net.gusri.yongdolah.SetupActivity">

    <TextView
        android:id="@+id/tv_Tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="SELAMAT DATANG"
        android:textAlignment="center"
        android:textSize="17sp"
        android:typeface="monospace"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/congrat1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/congrat1"
            android:textColor="@color/intext2"/>

        <TextView
            android:id="@+id/tv_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="email"
            android:paddingLeft="3dp"
            android:textColor="@color/intext1"/>
    </LinearLayout>

        <TextView
            android:id="@+id/congrat2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/congrat2"
            android:layout_below="@+id/et_Title"
            android:layout_marginTop="37dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/intext2"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="160dp"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/iv_imgProf"
                android:layout_width="120dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@mipmap/users"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imb_Capture"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/circle_image"
                    android:padding="5dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_image_gallery"/>
            </LinearLayout>
        </FrameLayout>

        <EditText
            android:id="@+id/et_FirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/firstname"/>

        <EditText
            android:id="@+id/et_LastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/lastname"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_SubmitProf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/setup"
        android:background="@drawable/button_background"
        android:textColor="@android:color/white"/>
</RelativeLayout>
