<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">

    <TextView
        android:id="@+id/tv_TitHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_marginTopPercent="2%"/>

    <EditText
        android:id="@+id/et_MailLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_TitHeader"
        android:background="@drawable/transparan_mode"
        android:drawableLeft="@drawable/ic_mail_outline"
        android:drawablePadding="10dp"
        android:focusable="false"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/light_blue"
        app:layout_marginTopPercent="2%"/>

    <EditText
        android:id="@+id/et_PassLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_MailLog"
        android:background="@drawable/transparan_mode"
        android:drawableLeft="@drawable/ic_lock_outline"
        android:drawablePadding="10dp"
        android:focusable="false"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/light_blue"
        app:layout_marginTopPercent="1%"/>

    <Button
        android:id="@+id/btn_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_PassLog"
        android:background="@drawable/transparan_mode"
        android:text="@string/login"
        android:textColor="@color/color_button"
        android:textStyle="bold"
        app:layout_marginTopPercent="3%"/>

    <TextView
        android:id="@+id/tv_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_Login"
        android:text="@string/reg"
        android:textAlignment="center"
        app:layout_marginTopPercent="1%"/>

    <ImageButton
        android:id="@+id/btn_Reg"
        android:layout_below="@+id/tv_reg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:background="@drawable/circle_button"
        android:padding="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_person_add"
        app:layout_aspectRatio="100%"
        app:layout_marginTopPercent="1%"
        app:layout_widthPercent="18%"/>

    <TextView
        android:id="@+id/tv_OR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView"
        android:text="OR "
        android:textAlignment="center"
        android:textColor="@color/textcolor"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fb_login"
        android:text="Login with : "
        android:textAlignment="center"
        android:textColor="@color/intext2"
        app:layout_marginBottomPercent="2%"/>

    <ImageButton
        android:id="@+id/fb_login"
        android:layout_alignParentBottom="true"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:src="@drawable/ic_fb_light"
        app:layout_aspectRatio="100%"
        app:layout_marginBottomPercent="10%"
        app:layout_marginLeftPercent="32%"
        app:layout_widthPercent="17%"/>

    <ImageButton
        android:id="@+id/google_login"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:src="@drawable/ic_google_light"
        app:layout_aspectRatio="100%"
        app:layout_marginBottomPercent="10%"
        app:layout_marginRightPercent="32%"
        app:layout_widthPercent="17%"/>
</android.support.percent.PercentRelativeLayout>
